--- a/scss/_04-mixins.scss
+++ b/scss/_04-mixins.scss
@@ -8,3 +8,22 @@
         @content;
     }
 }
+
+@mixin btn($bg) {
+    padding: 1.2rem 2rem;
+    color:$clr-white;
+    font-weight: 700;
+    font-size: 1.4rem;
+    border-radius: 5rem;
+    display: inline-block;
+    background: $bg;
+    &:hover {
+      background: darken($bg, 10);
+    }
+  }
+
+  @mixin grid ($cols: 1, $gap: 1rem){
+    display: grid;
+    grid-template-columns: repeat($cols,1fr);
+    grid-gap:$gap;
+  } 
